--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
           <img id="logo" src="logo.png" />
           <h1 class="title">trashmaps.org</h1>
         </a>
-
+        <h2>alpha</h2>
       </div>
     </header>
   </div>
